# sprinkles_os

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  gdt.rs  init.rs  interrupts.rs  main.rs  memory.rs  vga_buffer.rs
src/: allocator.rs  fs.rs  init.rs  interrupts.rs  main.rs  memory.rs  runtime.rs  vga_buffer.rs
src/task/: keyboard.rs
