[package]
name = "sprinkles_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.7"
lazy_static = { version="1.0", features=["spin_no_std"]  }
spin = "0.9.4"
x86_64 = "0.14.10"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"